Added Pages for App
- added initial code for page components

TODO

- set up page routing

--- a/tests/loteria_app.ipynb
+++ b/tests/loteria_app.ipynb
@@ -25,6 +25,13 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Test Dev Notebook"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -48,7 +55,10 @@
     }
    ],
    "source": [
+    "# code to generate unique code for game code and player id's\n",
+    "\n",
     "def generate_unique_code():\n",
+    "    # generates a numerical number then cast to int\n",
     "    code_options = string.digits\n",
     "    generated_game_code = ''.join(secrets.choice(code_options) for i in range(7))\n",
     "    return int(generated_game_code)\n",
@@ -56,36 +66,36 @@
     "code_2 = generate_unique_code()\n",
     "print(code_1)\n",
     "print(code_2)\n",
-    "\n",
     "print(code_1 + code_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_player_id():\n",
+    "    # generates a mix of uppercase letters and digits for player ids\n",
     "    code_options = string.ascii_uppercase + string.digits\n",
-    "    generated_player_id = ''.join(secrets.choice(code_options) for i in range(7))\n",
+    "    generated_player_id = ''.join(secrets.choice(code_options) for i in range(5))\n",
     "    return generated_player_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<function __main__.generate_player_id()>"
+       "'DFZA9'"
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 33
     }
    ],
    "source": [
